# mkdocstrings_autoref_demo

./: 404.html  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml
.github/workflows/: ci.yml
api/: index.html
reference/SUMMARY/: index.html
reference/gandalf/: index.html
reference/gandalf/main/: index.html
reference/gandalf/utils/: index.html
search/: search_index.json
src/gandalf/: __init__.py  main.py  utils.py
test/: test_main.py
